# micasa

./: .gitignore  AGENTS.md  AGENT_LOG.md  Cargo.toml  LEARNINGS.md  PLANS.md  README.md  flake.nix  go.mod  go.sum  remaining_work.md
.codex/: default.rules
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
cmd/micasa/: main.go
crates/micasa-app/: Cargo.toml
crates/micasa-app/src/: forms.rs  ids.rs  lib.rs  model.rs  state.rs
crates/micasa-cli/: Cargo.toml
crates/micasa-cli/src/: config.rs  main.rs  runtime.rs
crates/micasa-db/: Cargo.toml
crates/micasa-db/src/: lib.rs  validation.rs
crates/micasa-db/src/sql/: schema.sql
crates/micasa-db/tests/: store_tests.rs
crates/micasa-db/tests/fixtures/: README.md  go-schema-v1.sql
crates/micasa-llm/: Cargo.toml
crates/micasa-llm/src/: lib.rs
crates/micasa-llm/tests/: client_tests.rs
crates/micasa-testkit/: Cargo.toml
crates/micasa-testkit/src/: lib.rs
crates/micasa-tui/: Cargo.toml
crates/micasa-tui/src/: lib.rs
docs/: hugo.toml
docs/content/: _index.md
docs/content/blog/: launch.md
docs/content/development/: _index.md  architecture.md  building.md  contributing.md  testing.md
docs/content/docs/: _index.md
docs/content/docs/development/: architecture.md  building.md  contributing.md  dependency-audit.md  testing.md
docs/content/docs/getting-started/: first-run.md  installation.md
docs/content/docs/guide/: documents.md  llm-chat.md
docs/content/docs/reference/: configuration-v2.md  configuration.md  data-storage.md
docs/content/getting-started/: _index.md  concepts.md  first-run.md  installation.md
docs/content/guide/: _index.md  appliances.md  dashboard.md  house-profile.md  maintenance.md  navigation.md  projects.md  quotes.md  sorting-and-columns.md  undo-redo.md
docs/content/reference/: _index.md  configuration.md  data-storage.md  keybindings.md
docs/layouts/: index.html
docs/layouts/_default/: baseof.html  list.html
docs/layouts/partials/: pager.html  sidebar.html
docs/static/css/: docs.css
docs/tapes/: appliances.tape  dashboard.tape  demo.tape  documents.tape  help.tape  house-profile.tape  maintenance.tape  projects.tape  quotes.tape  service-log.tape  sorting.tape
internal/app/: calendar.go  calendar_test.go  collapse.go  dashboard.go  dashboard_test.go  forms.go  handlers.go  handlers_test.go  house.go  logging.go  logging_test.go  mode_test.go  model.go  search.go  sort.go  sort_test.go  styles.go  table.go  tables.go  types.go  undo.go  undo_test.go  view.go  view_test.go
internal/data/: models.go  path.go  store.go  store_test.go  validation.go  validation_test.go
plans/: rust-port.md  rust-test-parity-matrix.md  table-rendering-parity.md
website/: index.html  style.css
