# Copyright 2026 Phillip Cloud
# Licensed under the Apache License, Version 2.0

[workspace]
members = [
  "crates/micasa-app",
  "crates/micasa-db",
  "crates/micasa-tui",
  "crates/micasa-llm",
  "crates/micasa-testkit",
  "crates/micasa-cli",
]
default-members = ["crates/micasa-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
rusqlite = { version = "0.37.0", features = ["blob", "bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.9.5"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2.5.7"

[workspace.dependencies.tempfile]
version = "3.20.0"
