# Copyright 2026 Phillip Cloud
# Licensed under the Apache License, Version 2.0

[package]
name = "micasa-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
micasa-app = { path = "../micasa-app" }
rusqlite.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
micasa-testkit = { path = "../micasa-testkit" }
tempfile.workspace = true
