# Copyright 2026 Phillip Cloud
# Licensed under the Apache License, Version 2.0

[package]
name = "micasa-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
micasa-app = { path = "../micasa-app" }
rusqlite.workspace = true
tempfile.workspace = true
time.workspace = true
